css/style.css
html, body {
  margin: 0;
  background-image: url("../images/background2.jpg");
  background-size: 100% 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

div h5 {
	font-weight: bold;
}

div p {
	padding-top: 7px;
}

.container {
  margin: 10px auto;
  position: relative;
  max-width: 740px;
  background-color: white;
}

header {
	text-align: center;
	padding-top: 20px;
}

header a {
	padding: 20px;
	font-family: Verdana, sans-serif;
	text-decoration: none;
	color: black;
}

header a:hover {
	text-decoration: underline;
	color: #4386fc;
}

.currentPage {
	text-decoration: underline;
	color: #4386fc;
}

.center {
	text-align: center;
}

.right {
	text-align: right;
}

#contactMe {
	margin-left: 10%;
	padding-bottom: 60px;
}

.chelsea {
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	color: #4386fc;
}

section {
	padding: 10px;
	width: 100%;
}

section img {
	float: left;
	padding-right: 10px;
}

section div {
	padding-bottom: 5px;
}

.socialMedia img, .socialMediaContact img {
	padding-top: 20px;
}

table td {
	padding-right: 10px;
	vertical-align: top;
	padding-top: 5px;
}

#map-div {
  height: 400px;
  width: 100%;
  padding-bottom: 5%;
}

.projectImg {
	width: 100%;
	padding-right: 0;
	padding-top: 20px;
}

#clear {
	clear: both;
	padding-top: 20px;
	text-align: left;
}

#connectSocial {
	padding-left: 30%;
}

a button {
	width: 100%;
	margin-top: 20px;
}

footer {
	background-color: black;
	color: white;
	height: 100px;
	width: 100%;
	text-align: center;
	padding: 40px 20px 20px 20px;
}

/* media queries for responsive design */

@media screen and (max-width: 990px) {
	.projectImg {
		padding-right: 20px;
	}
	.projectDesc, a .projectDesc {
		padding: 15px;
		margin: 5px;
	}
}

@media screen and (max-width: 760px) {
	#connectSocial {padding: 0px;}
	.center {text-align: left;}
	.center img {
		padding-left: 5px;
		padding-right: 5px;
	}
	}

@media screen and (max-width: 620px) {
	#contactMe {margin-left: 0px;}
	#message {width: 70%;}
	.socialMedia img {display: none;}
	.center {
		text-align: center;
		display: block;
		margin: auto;
		padding-bottom: 10px;
	}
	footer {padding-top: 20px;}
}

@media screen and (max-width: 480px) {
	section img {float: none;}
	header a {padding: 5px;}
}

